# pillow_lab_rotation

./: .gitignore  JS.mplstyle  README.md  pyproject.toml
docs/meetings/: 3-6-26.key  jonathan meeting 1-8-26.md  jonathan-meeting--3-23-26.md
docs/notes/: PRRR.md  Potential Rotation Projects.md  lds-parameter-recovery.md  runyan data notes.md
docs/notes/Kalman_Filter_tutorial/: .gitignore  kftutorial.tex
docs/notes/Kalman_Filter_tutorial/latexstuff/: jpbib.bib  jpdefs.tex
docs/notes/ip-rslds/: ip-rslds.aux  ip-rslds.fdb_latexmk  ip-rslds.fls  ip-rslds.tex
docs/notes/prrr/: Dynamic_PRRR_SPEC.md  PRRR_SPEC.md
notebooks/: ctds.ipynb  ctds_param_recovery.ipynb  ctds_w_inputs_param_recovery.ipynb  explore_data.ipynb  jax_practice.ipynb  jax_vs_numpy_ctds.ipynb  jax_vs_numpy_lds.ipynb  kalman_practice.ipynb  lds.ipynb  lds_param_recovery.ipynb  lds_w_inputs_param_recovery.ipynb  lowrank_rnn.ipynb  mr_ctds.ipynb  nmf.ipynb  ssm_bug_demonstrations.ipynb  test_eirnn_init.ipynb  testing_against_aditis.ipynb
scripts/: ctds_recovery.py  lds_recovery.py  n_latents_grid.py  n_latents_grid_parallel.py
src/pillow_lab_rotation/: ctds.py  dataio.py  dists.py  eirnn.py  jax_ctds.py  jax_lds.py  kalman.py  lds.py  plotting.py  simulate.py  ssm_patches.py  tools.py
src/pillow_lab_rotation/uberphys/: uberphys_io.py  utils.py
