[project]
name = "pillow_lab_rotation"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "cvxpy",
    "tqdm",
    "scikit-learn",
    "scikit-image",
    "mosek>=11.1.10",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "ipykernel",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pillow_lab_rotation"]
