[project]
name = "pillow_lab_rotation"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "cvxpy",
    "tqdm",
    "scikit-learn",
    "scikit-image",
    "mosek>=11.1.10",
    "dynamax>=1.0.1",
    "jax<0.6",
    "jaxlib<0.6",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "ipykernel",
    "pytest",
]

[tool.uv.sources]
ssm = { path = "vendor/Cell_type_dynamical_system/ssm", editable = true }
adithis-utils = { path = "vendor/Cell_type_dynamical_system", editable = true }

[dependency-groups]
ref = [
    "ssm",
    "adithis-utils",
    "autograd",
    "numba",
    "cython",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pillow_lab_rotation"]
